Rename kibana/Kibana to openSearchDashboards/OpenSearchDashboards in method name, class name and comments.

--- a/legacy/securityconfig_v6/roles.yml
+++ b/legacy/securityconfig_v6/roles.yml
@@ -69,7 +69,7 @@ opendistro_security_readall_and_monitor:
       '*':
         - READ
 
-# For users which use kibana, access to indices must be granted separately
+# For users which use openSearchDashboards, access to indices must be granted separately
 opendistro_security_kibana_user:
   readonly: true
   cluster:
