--- a/src/test/resources/config_anon.yml
+++ b/src/test/resources/config_anon.yml
@@ -12,7 +12,7 @@ config:
     kibana:
       multitenancy_enabled: true
       server_username: "kibanaserver"
-      index: ".kibana"
+      index: ".openSearchDashboards"
     http:
       anonymous_auth_enabled: true
       xff:
