--- a/src/main/resources/static_config/static_roles.yml
+++ b/src/main/resources/static_config/static_roles.yml
@@ -25,13 +25,13 @@ kibana_user:
   reserved: true
   hidden: false
   static: true
-  description: "Provide the minimum permissions for a openSearchDashboards user"
+  description: "Provide the minimum permissions for a kibana user"
   cluster_permissions:
     - "cluster_composite_ops"
   index_permissions:
     - index_patterns:
-        - ".openSearchDashboards"
-        - ".openSearchDashboards-6"
+        - ".kibana"
+        - ".kibana-6"
         - ".kibana_*"
         - ".opensearch_dashboards"
         - ".opensearch_dashboards-6"
@@ -81,7 +81,7 @@ kibana_server:
   reserved: true
   hidden: false
   static: true
-  description: "Provide the minimum permissions for the OpenSearchDashboards server"
+  description: "Provide the minimum permissions for the Kibana server"
   cluster_permissions:
   - "cluster_monitor"
   - "cluster_composite_ops"
@@ -89,12 +89,12 @@ kibana_server:
   - "indices:data/read/scroll*"
   index_permissions:
   - index_patterns:
-    - ".openSearchDashboards"
+    - ".kibana"
     - ".opensearch_dashboards"
     allowed_actions:
     - "indices_all"
   - index_patterns:
-    - ".openSearchDashboards-6"
+    - ".kibana-6"
     - ".opensearch_dashboards-6"
     allowed_actions:
     - "indices_all"
