--- a/src/test/resources/legacy/securityconfig_v6/config.yml
+++ b/src/test/resources/legacy/securityconfig_v6/config.yml
@@ -61,7 +61,7 @@ opendistro_security:
     #openSearchDashboards:
       #multitenancy_enabled: true
       #server_username: kibanaserver
-      #index: '.openSearchDashboards'
+      #index: '.kibana'
       #do_not_fail_on_forbidden: false
     http:
       anonymous_auth_enabled: false
