--- a/securityconfig/roles.yml
+++ b/securityconfig/roles.yml
@@ -2,7 +2,7 @@ _meta:
   type: "roles"
   config_version: 2
 
-# Restrict users so they can only view visualization and dashboard on OpenSearchDashboards
+# Restrict users so they can only view visualization and dashboard on Kibana
 kibana_read_only:
   reserved: true
 
