--- a/src/test/resources/legacy/securityconfig_v6/migration/roles.yml
+++ b/src/test/resources/legacy/securityconfig_v6/migration/roles.yml
@@ -64,7 +64,7 @@ opendistro_security_readall_and_monitor:
       '*':
         - READ
 
-# For users which use openSearchDashboards, access to indices must be granted separately
+# For users which use kibana, access to indices must be granted separately
 opendistro_security_kibana_user:
   readonly: true
   cluster:
@@ -101,7 +101,7 @@ opendistro_security_kibana_user:
         - indices:admin/mappings/get*
         - indices:admin/get
 
-# For the openSearchDashboards server
+# For the kibana server
 opendistro_security_kibana_server:
   readonly: true
   cluster:
