--- a/src/test/resources/log4j2-test.properties
+++ b/src/test/resources/log4j2-test.properties
@@ -17,10 +17,10 @@ rootLogger.level = warn
 rootLogger.appenderRef.console.ref = console
 rootLogger.appenderRef.file.ref = LOGFILE
 
-#logger.resolver.name = com.amazon.opendistroforelasticsearch.security.resolver
+#logger.resolver.name = org.opensearch.security.resolver
 #logger.resolver.level = trace
 
-#logger.pe.name = com.amazon.opendistroforelasticsearch.security.configuration.PrivilegesEvaluator
+#logger.pe.name = org.opensearch.security.configuration.PrivilegesEvaluator
 #logger.pe.level = trace
 
 logger.cas.name = org.opensearch.cluster.service.ClusterApplierService
