--- a/securityconfig/opensearch.yml.example
+++ b/securityconfig/opensearch.yml.example
@@ -193,11 +193,11 @@ opendistro_security.audit.type: internal_opensearch
 # This defines the OID of server node certificates
 #opendistro_security.cert.oid: '1.2.3.4.5.5'
 
-# This specifies the implementation of com.amazon.opendistroforelasticsearch.security.transport.InterClusterRequestEvaluator
+# This specifies the implementation of org.opensearch.security.transport.InterClusterRequestEvaluator
 # that is used to determine inter-cluster request.
-# Instances of com.amazon.opendistroforelasticsearch.security.transport.InterClusterRequestEvaluator must implement a single argument
+# Instances of org.opensearch.security.transport.InterClusterRequestEvaluator must implement a single argument
 # constructor that takes an org.opensearch.common.settings.Settings
-#opendistro_security.cert.intercluster_request_evaluator_class: com.amazon.opendistroforelasticsearch.security.transport.DefaultInterClusterRequestEvaluator
+#opendistro_security.cert.intercluster_request_evaluator_class: org.opensearch.security.transport.DefaultInterClusterRequestEvaluator
 
 # By default, normal users can restore snapshots if they have the priviliges 'cluster:admin/snapshot/restore', 
 # 'indices:admin/create', and 'indices:data/write/index' for the indices to be restored.
