--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,6 +4,12 @@ on:
   pull_request:
     branches:
       - '*'
+    paths-ignore:
+      - '*.md'
+      - '*.txt'
+      - 'release-notes/**'
+      - 'THIRD-PARTY'
+      - 'LICENSE'
   push:
     branches:
       - main
